--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             class="absolute -inset-4 bg-purple-500 rounded-full blur-3xl opacity-10"
           ></div>
           <img
-            src="./01.png"
+            src="./assets/01.png"
             alt="Profile"
             class="relative w-full max-w-md mx-auto rounded-[2rem] border border-white/10 grayscale hover:grayscale-0 transition duration-700"
           />
